--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-44aa u-white u-header" id="sec-6607"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="871" data-image-height="1080">
+        <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="871" data-image-height="1080" title="Home">
           <img src="images/1674144724058.png" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-menu u-menu-one-level u-menu-open-right u-offcanvas u-menu-1" data-responsive-from="MD">
+        <nav class="u-menu u-menu-dropdown u-menu-open-right u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; font-family: Poppins;">
-            <a class="u-button-style u-custom-border u-custom-border-color u-custom-borders u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
+            <a class="u-button-style u-custom-border u-custom-border-color u-custom-borders u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#" style="">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
               <svg class="u-svg-content" version="1.1" id="menu-hamburger" viewBox="0 0 16 16" x="0px" y="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg"><g><rect y="1" width="16" height="2"></rect><rect y="7" width="16" height="2"></rect><rect y="13" width="16" height="2"></rect>
 </g></svg>
@@ -53,13 +53,13 @@
 </li></ul>
           </div>
           <div class="u-custom-menu u-nav-container-collapse">
-            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
+            <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-75 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
-                <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_f7e1">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_64ac">About Us</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_8b86">Services</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_dae2">Contact</a>
+                <ul class="u-align-center u-nav u-popupmenu-items u-spacing-0 u-text-active-palette-1-base u-text-hover-palette-2-base u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_f7e1" style="padding-top: 18px; padding-bottom: 18px;">Home</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_64ac" style="padding-top: 18px; padding-bottom: 18px;">About Us</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_8b86" style="padding-top: 18px; padding-bottom: 18px;">Services</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html#carousel_dae2" style="padding-top: 18px; padding-bottom: 18px;">Contact</a>
 </li></ul>
               </div>
             </div>
@@ -85,7 +85,7 @@ borders: top right bottom left !important
             <h2 class="u-custom-font u-text u-text-body-alt-color u-text-2" data-animation-name="" data-animation-duration="0" data-animation-direction="">THE ART OF TECH <br>
             </h2>
             <p class="u-custom-font u-text u-text-body-alt-color u-text-3" spellcheck="false"> Just a bunch of youngsters aspiring for technology, thriving to bring it to the world at a reasonable cost. We believe in making lives easier with what we deliver.</p>
-            <a href="Home.html#carousel_64ac" class="u-btn u-btn-round u-button-style u-radius-10 u-btn-1">learn more</a>
+            <a href="files/CYBERTESZBrouchure.pdf" class="u-btn u-btn-round u-button-style u-file-link u-radius-10 u-btn-1" target="_blank">learn more</a>
           </div>
         </div>
       </div>
@@ -311,7 +311,7 @@ borders: top right bottom left !important
         <div class="u-repeater u-repeater-1">
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-1">
-              <div alt="" class="u-hover-feature u-image u-image-circle u-image-1" data-image-width="778" data-image-height="778" data-href="https://www.instagram.com/la_kavin_et_6/"></div>
+              <div alt="" class="u-hover-feature u-image u-image-circle u-image-1" data-image-width="778" data-image-height="778" data-href="https://www.instagram.com/la_kavin_et_6/" data-target="_blank"></div>
               <h6 class="u-text u-text-3">ART DIRECTOR<br>
               </h6>
             </div>
@@ -325,14 +325,14 @@ borders: top right bottom left !important
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-3">
-              <div alt="" class="u-hover-feature u-image u-image-circle u-image-3" data-image-width="807" data-image-height="807" data-href="https://www.instagram.com/__s.a.r.a.n__off/"></div>
+              <div alt="" class="u-hover-feature u-image u-image-circle u-image-3" data-image-width="807" data-image-height="807" data-href="https://www.instagram.com/__s.a.r.a.n__off/" data-target="_blank"></div>
               <h6 class="u-text u-text-5">COPY MASTER<br>
               </h6>
             </div>
           </div>
           <div class="u-align-center u-container-style u-list-item u-repeater-item">
             <div class="u-container-layout u-similar-container u-valign-top-xl u-container-layout-4">
-              <div alt="" class="u-hover-feature u-image u-image-circle u-image-4" data-image-width="512" data-image-height="512" data-href="https://www.instagram.com/cybertesz/"></div>
+              <div alt="" class="u-hover-feature u-image u-image-circle u-image-4" data-image-width="512" data-image-height="512" data-href="https://www.instagram.com/cybertesz/" data-target="_blank"></div>
               <h6 class="u-text u-text-6">CYBORG<br>
               </h6>
             </div>
@@ -349,7 +349,7 @@ borders: top right bottom left !important
       <div class="u-align-center u-container-style u-group u-opacity u-opacity-60 u-shape-rectangle u-white u-group-1">
         <div class="u-container-layout u-container-layout-1">
           <h4 class="u-custom-font u-font-montserrat u-text u-text-1" spellcheck="false">Contact Info</h4>
-          <a href="https://nicepage.com/k/auto-mechanic-html-templates" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-1">Enquire</a>
+          <a href="https://www.instagram.com/cybertesz/" class="u-btn u-btn-round u-button-style u-hover-palette-1-light-1 u-palette-1-base u-radius-6 u-btn-1" target="_blank">Enquire</a>
           <a href="httpps://wa.me/+91-9840207851" class="u-active-none u-align-center-xs u-btn u-button-style u-hover-none u-none u-text-black u-text-hover-palette-2-base u-btn-2" target="_blank"><span class="u-icon u-icon-1"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" style="width: 1em; height: 1em;"><path style="fill:currentColor;" d="M256,0C114.617,0,0,114.617,0,256c0,52.03,15.563,100.414,42.231,140.818L0,512l119.128-39.706  C158.72,497.399,205.639,512,256,512c141.383,0,256-114.617,256-256S397.383,0,256,0z"></path><path style="fill:#FFFFFF;" d="M397.233,335.078V377.6c0.062,15.66-12.606,28.398-28.292,28.469c-0.892,0-1.783-0.035-2.675-0.115  c-43.705-4.74-85.689-19.641-122.571-43.52c-34.313-21.76-63.409-50.803-85.222-85.054c-24.002-36.979-38.938-79.086-43.599-122.898  c-1.412-15.59,10.108-29.378,25.732-30.791c0.847-0.062,1.686-0.106,2.534-0.106h42.611c14.257-0.141,26.412,10.293,28.407,24.382  c1.801,13.612,5.138,26.968,9.94,39.83c3.902,10.364,1.404,22.042-6.391,29.908l-18.035,17.999  c20.215,35.487,49.664,64.874,85.221,85.054l18.035-17.999c7.883-7.786,19.588-10.275,29.97-6.382  c12.888,4.802,26.271,8.13,39.91,9.922C387.09,308.312,397.594,320.689,397.233,335.078z"></path></svg><img></span>&nbsp;Chat Now
           </a>
           <a href="mailto:contact@yourmail.com" class="u-active-none u-btn u-button-style u-hover-none u-none u-text-hover-palette-2-base u-btn-3"><span class="u-icon u-text-palette-2-base"><svg class="u-svg-content" viewBox="0 0 479.058 479.058" style="width: 1em; height: 1em;"><path d="m434.146 59.882h-389.234c-24.766 0-44.912 20.146-44.912 44.912v269.47c0 24.766 20.146 44.912 44.912 44.912h389.234c24.766 0 44.912-20.146 44.912-44.912v-269.47c0-24.766-20.146-44.912-44.912-44.912zm0 29.941c2.034 0 3.969.422 5.738 1.159l-200.355 173.649-200.356-173.649c1.769-.736 3.704-1.159 5.738-1.159zm0 299.411h-389.234c-8.26 0-14.971-6.71-14.971-14.971v-251.648l199.778 173.141c2.822 2.441 6.316 3.655 9.81 3.655s6.988-1.213 9.81-3.655l199.778-173.141v251.649c-.001 8.26-6.711 14.97-14.971 14.97z"></path></svg><img></span> cybertesz@proton.me
@@ -365,16 +365,5 @@ background-color: #f2f2f2 !important
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3af1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2021 by EAOO5 INDUSTRIES . All Rights Reserved</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
-        <span>HTML Template</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="https://nicepage.site" target="_blank">
-        <span>Free Website Builder</span>
-      </a>. 
-    </section>
   
 </body></html>
