--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-44aa u-white u-header" id="sec-6607"><div class="u-clearfix u-sheet u-sheet-1">
+  <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-44aa u-white u-header" id="sec-6607"><div class="u-clearfix u-sheet u-sheet-1">
         <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="871" data-image-height="1080" title="Home">
           <img src="images/1674144724058.png" class="u-logo-image u-logo-image-1">
         </a>
@@ -363,7 +363,18 @@ background-color: #f2f2f2 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3af1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2023 by CYBERTESZ . All Rights Reserved</p>
+        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2021 by EAOO5 INDUSTRIES . All Rights Reserved</p>
       </div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="https://nicepage.com/html-templates" target="_blank">
+        <span>HTML Template</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="https://nicepage.site" target="_blank">
+        <span>Free Website Builder</span>
+      </a>. 
+    </section>
   
 </body></html>
