--- a/Home.html
+++ b/Home.html
@@ -363,7 +363,7 @@ background-color: #f2f2f2 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3af1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2021 by EAOO5 INDUSTRIES . All Rights Reserved</p>
+        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2023 by CYBERTESZ . All Rights Reserved</p>
       </div></footer>
   
 </body></html>
