--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "WebSite3849679",
-		"logo": "images/1674144724058.png"
+		"logo": "images/BeigePinkMinimalistLuxuryWeddingPlannerStampLogo.png"
 }</script>
     <meta name="theme-color" content="#2544b8">
     <meta property="og:title" content="Home">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-44aa u-white u-header" id="sec-6607"><div class="u-clearfix u-sheet u-sheet-1">
-        <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="871" data-image-height="1080" title="Home">
-          <img src="images/1674144724058.png" class="u-logo-image u-logo-image-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-sticky u-sticky-44aa u-white u-header" id="sec-6607"><div class="u-clearfix u-sheet u-valign-top u-sheet-1">
+        <a href="Home.html" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500" title="Home">
+          <img src="images/BeigePinkMinimalistLuxuryWeddingPlannerStampLogo.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-dropdown u-menu-open-right u-menu-1" data-responsive-from="MD">
           <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-weight: 700; font-family: Poppins;">
@@ -363,7 +363,8 @@ background-color: #f2f2f2 !important
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-3af1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2023 by cybertesz . All Rights Reserved</p>
+        <p class="u-small-text u-text u-text-variant u-text-1" spellcheck="false"> Copyright © 2023 by CYBERTESZ & co . All Rights Reserved</p>
       </div></footer>
+   
   
 </body></html>
